Bootcamp.WebApi/deploy/pgsql.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pgsql-db
  namespace: webapi
spec:
  serviceName: pgsql-db-service
  selector:
    matchLabels:
      app: pgsql-db
  replicas: 1
  template:
    metadata:
      labels:
        app: pgsql-db
    spec:
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory        
        - name: pgsql-db-disk
          persistentVolumeClaim:
            claimName: pgsql-db-disk
      containers:
        - name: pgsql-db
          image: postgres:16
          volumeMounts:
            - name: pgsql-db-disk
              mountPath: /var/lib/postgresql/data
            - mountPath: /dev/shm
              name: dshm
          ports:
            - containerPort: 5432
