Bootcamp.WebApi/deploy/web-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-api
  namespace: webapi
  labels:
    app: web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-api
  template:
    metadata:
      name: web-api
      labels:
        app: web-api
    spec:
      containers:
        - name: web-api
          image: webapi:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
