Bootcamp.WebApi/deploy/pgsql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgsql
  namespace: webapi
spec:
  selector:
    app: pgsql-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
