Bootcamp.WebApi/deploy/webapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapi
  namespace: webapi
spec:
  selector:
    app: web-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
