Bootcamp.WebApi/deploy/webapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapi
spec:
  ingressClassName: nginx
  rules:
    - host: api.bootcamp.althunibat.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapi
                port:
                  number: 8080
